--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Nunito:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>OptionImmo</title>
-    <meta name="description" content="Expert real estate asset management services. Strategic planning, portfolio optimization, and value enhancement for your property investments." />
-    <meta property="og:image" content="https://bolt.new/static/og_default.png" />
+    <meta name="description" content="OptionImmo" />
+    <!-- <meta property="og:image" content="https://bolt.new/static/og_default.png" /> -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
+    <!-- <meta name="twitter:image" content="https://bolt.new/static/og_default.png" /> -->
   </head>
   <body>
     <div id="root"></div>
